[gd_scene load_steps=5 format=3 uid="uid://vwxqx74xs3po"]

[ext_resource type="Script" path="res://src/menus/hud.gd" id="1_aokp4"]
[ext_resource type="FontFile" uid="uid://ban5wal70vg1d" path="res://fonts/colemanpixel.ttf" id="2_mx4ol"]
[ext_resource type="PackedScene" uid="uid://cdrhj6wyf1wb7" path="res://src/menus/pause/pause_menu.tscn" id="3_jqlbr"]
[ext_resource type="PackedScene" uid="uid://b3fn485c8kir3" path="res://src/menus/high_score/high_score_screen.tscn" id="4_gp13k"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_aokp4")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.266667, 0, 1)
theme_override_fonts/font = ExtResource("2_mx4ol")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -22.5
offset_right = 134.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_mx4ol")
theme_override_font_sizes/font_size = 32
text = "Across The Stars"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_mx4ol")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Mute" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_mx4ol")
text = "Mute"

[node name="HighScoresButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -624.0
offset_top = 404.0
offset_right = -531.0
offset_bottom = 428.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_mx4ol")
text = "High Scores"

[node name="PauseMenu" parent="." instance=ExtResource("3_jqlbr")]

[node name="HighScoreScreen" parent="." instance=ExtResource("4_gp13k")]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="Mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="HighScoresButton" to="." method="_on_high_scores_pressed"]
